[tool.poetry]
name = "cleangram-codegen"
version = "0.0.0.dev1"
description = "Code generator for cleangram"
authors = ["Arwichok <me@arwi.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
